[gd_scene load_steps=16 format=2]

[ext_resource path="res://graphics/Sprite/Yannisfinal.png" type="Texture" id=1]
[ext_resource path="res://ModeAI/IAScript.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "attacksp"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 49 ]
}

[sub_resource type="Animation" id=2]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=6]
resource_name = "punch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
resource_name = "punch2"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=8]
resource_name = "sneak"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=9]
resource_name = "victory"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 70.9736, 1.35282 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 43.2761, 65.5935 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 24.5659, 55.7442 )

[node name="IA" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="AnimationAI" type="AnimationPlayer" parent="."]
anims/attacksp = SubResource( 1 )
anims/dead = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/punch = SubResource( 6 )
anims/punch2 = SubResource( 7 )
anims/sneak = SubResource( 8 )
anims/victory = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 10
hframes = 5
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.89842, 188.806 )
shape = SubResource( 11 )

[node name="Body" type="Area2D" parent="."]
position = Vector2( 0, 43.3062 )

[node name="corp" type="CollisionShape2D" parent="Body"]
position = Vector2( 1.4285, 53.1389 )
shape = SubResource( 12 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 115, 55 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"attack",
]]

[node name="CollisionShape2D1" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 96.7907, 73.6819 )
shape = SubResource( 13 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -99.9548, 75.5654 )
shape = SubResource( 13 )
disabled = true
[connection signal="animation_finished" from="AnimationAI" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
